--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <title>Wireframe</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <img src="http://via.placeholder.com/200x70/000000">
-      <ul>
-        <li>Nav Item 1</li>
-        <li>Nav Item 2</li>
-        <li>Nav Item 3</li>
-        <li>Nav Item 4</li>
-      </ul>
+      <nav>
+        <img src="http://via.placeholder.com/200x70/000000">
+        <ul>
+          <li>Nav Item 1</li>
+          <li>Nav Item 2</li>
+          <li>Nav Item 3</li>
+          <li>Nav Item 4</li>
+        </ul>
+      </nav>
     </header>
     <main>
       <img src="http://via.placeholder.com/960x450/000000">
@@ -20,12 +24,12 @@
         <li><img src="http://via.placeholder.com/300x375/000000"> </li>
         <li><img src="http://via.placeholder.com/300x375/000000"> </li>
       </ul>
+      <img src="http://via.placeholder.com/480x400/000000">
       <div>
-        <img src="http://via.placeholder.com/300x375/000000">
-        <p></p>
+        <h1>Featured Section Heading</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</p>
         <form>
-          <label>Call To Action</label>
-          <input type="button">
+          <input type="button" value="Call To Action">
         </form>
       </div>
     </main>
